--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.calc {
+  display: block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calcBackground {
+  width: 390px;
+  height: 650px;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.calcBox {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.resultBox {
+  width: 100%;
+  height: 30%;
+  /* border: 1px red solid; */
+}
+
+.result {
+  float: right;
+  margin-top: 80px;
+  color: #fff;
+  font-size: 70px;
+  font-weight: 200;
+  font-family: Pretendard, sans-serif;
+}
+
+.result2 {
+  float: right;
+  margin-top: 80px;
+  color: #fff;
+  font-size: 60px;
+  font-weight: 200;
+  font-family: Pretendard, sans-serif;
+  margin-bottom: 12px;
+}
+
+.buttonBox {
+  width: 100%;
+  height: 70%;
+  /* border: 1px red solid; */
+}
+
+.line {
+  width: 100%;
+  height: 19.6%;
+ /*  border: 1px red solid; */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.round {
+  border-radius: 50%;
+  background-color: #fff;
+  width: 70px;
+  height: 70px;
+  margin: 5px;
+  font-weight: 500;
+  font-family: Pretendard, sans-serif;
+  font-size: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.round0 {
+  border-radius:50px;
+  background-color: #fff;
+  width: 130px;
+  height: 70px;
+  margin: 5px;
+  font-weight: 500;
+  font-family: Pretendard, sans-serif;
+  font-size: 35px;
+  display: flex;
+  padding-left: 20px;
+  align-items: center;
+}
+
+.lightgray{
+  background-color: #bbb;
+}
+
+.gray{
+  background-color: #444444;
+  color: #fff;
+}
+
+.orange {
+  background-color: #ffb428;
+  color: #fff;
+  transition: 0.5s;
+}
+
+.white {
+  background-color: #fff;
+  color: #ffb428;
+  transition: 0.5s;
+}
+.round:hover{
+  cursor: pointer;
+}
+
+.round0:hover{
+  cursor: pointer;
+}
+
+.orange:active{
+  background-color: #ffdd9d;
+  transition: 0.5s;
+}
+
+.lightgray:active{
+  background-color: #fff;
+  transition: 0.5s;
+}
+
+.gray:active{
+  background-color: #aaa;
+  transition: 0.5s;
+}
+
